--- a/design.css
+++ b/design.css
@@ -103,7 +103,7 @@ nav a{
 }
 section.preview-plane{
 	width: 100%;
-	height: 40vh;
+	height: 244px;
 	margin-top: 50px;
 	background-image: url("our-projects-img2.png");
 	background-blend-mode: darken;
@@ -239,4 +239,18 @@ td{
 	margin: auto;
 	width: 100%;
 }
+}
+@media all and (max-width: 520px){
+	section.preview-plane div {
+		width: 75vw;
+	}
+	.income-display, .expenses-display {
+    padding-left: 5px; 
+    padding-right: 0px; 
+}
+}
+@media all and (max-width: 385px){
+	section.preview-plane div {
+		width: 75vw;
+	}
 }
