--- a/design.css
+++ b/design.css
@@ -77,7 +77,7 @@ nav .register:hover{
     opacity: 1.0;
     color:  white !important;
 }
-.canvas , img{
+.canvas , .img{
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
@@ -101,10 +101,97 @@ nav a{
 	font-size: 3.0vw;
 } 
 }
+header.header{
+	height: 100vh;
+	width: 100%;
+	background: linear-gradient(to bottom, #33ccff 50%, #0099ff 100%);
+	align-items: center;
+	justify-content: center;
+	display: grid;
+}
+.header div{
+	border: 1px solid black;
+	padding: 8px 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	background-color: rgba(0,0,0,0.3);
+	font-family: "Open Sans Regular";
+	font-size: 90%;
+	transition: all 0.5s ease-in-out;
+}
+.header div:hover{
+	background-color: black;
+	color: white;
+	border: 1.5px solid black;
+	font-weight: bold;
+}
+.modal{
+    background-color: rgba(0 , 0, 0 , 0.8);
+    position: fixed;
+    display: none;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.menu-bar-open, .menu-bar-close {
+    z-index: 999999;
+}
+.modal-content-CONAT{
+    width:80%;
+    display:block;
+    margin:auto;
+    background-color: white;
+    padding: 20px;
+    color: black;
+
+}
+.modal-content-CONAT p{
+	margin-left: 15%;margin-right: 15%;
+	font-family: "Open Sans Regular";
+	font-size: 90%;
+}
+@media all and (max-width: 600px){
+	.modal-content-CONAT p{
+	margin-left: 1%;margin-right: 1%;
+}
+}
+label{
+	display: grid;
+	justify-content: center;
+	font-family: "Open Sans Regular";
+}
+.modal-content-CONAT .div{
+    color:black;margin-bottom:15px;
+    overflow-y: scroll;
+    margin-top: 20px;
+    }
+.close{
+    position:absolute;
+    right:15%;margin-top:10px;
+    color:black;font-size:35px;font-weight:700;
+
+    }
+.close:focus,.close:hover{
+    color:var(--deepblue--);
+    cursor:pointer
+    }
+.animate{
+	-webkit-animation:animatezoom .6s;
+	animation:animatezoom .6s
+}
+@-webkit-keyframes animatezoom{
+    from{-webkit-transform:scale(0)}
+    to{-webkit-transform:scale(1)}
+}
+@keyframes animatezoom{
+    from{transform:scale(0)}
+    to{transform:scale(1)}
+}
 section.preview-plane{
 	width: 100%;
 	height: 244px;
-	margin-top: 50px;
+	margin-top: 5px;
 	background-image: url("our-projects-img2.png");
 	background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.3);
